some styles fixed for breaks in headers on general page

--- a/styles/src/pages/general/cards.styl
+++ b/styles/src/pages/general/cards.styl
@@ -45,6 +45,11 @@
 				general-header-n1()
 				text-align center
 				margin-bottom -99px
+				box-sizing border-box
+				padding-x 40px
+
+				>span
+					display block
 
 			h2
 				general-header-n2()
