--- a/styles/src/pages/general/team.styl
+++ b/styles/src/pages/general/team.styl
@@ -26,6 +26,14 @@
 		h2
 			general-header-n2()
 			color #cae2e9
+			box-sizing border-box
+			padding-x 40px
+
+			>span
+				display block
+
+				@media (max-width: 560px)
+					display inline
 
 	ul.people
 		display block
